--- a/public/index.html
+++ b/public/index.html
@@ -20,63 +20,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-	<link
-			rel="apple-touch-icon"
-			sizes="72x72"
-			href="img/apple-touch-icon-72x72.png"
-	/>
-	<link
-			rel="apple-touch-icon"
-			sizes="114x114"
-			href="img/apple-touch-icon-114x114.png"
-	/>
-
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-	<link
-			rel="stylesheet"
-			type="text/css"
-			href="fonts/font-awesome/css/font-awesome.css"
-	/>
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<link
-			rel="stylesheet"
-			type="text/css"
-			href="css/nivo-lightbox/nivo-lightbox.css"
-	/>
-	<link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css" />
-	<link
-			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
-			rel="stylesheet"
-	/>
-	<link
-			href="https://fonts.googleapis.com/css?family=Lato:400,700"
-			rel="stylesheet"
-	/>
-	<link
-			href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
-			rel="stylesheet"
-	/>
 	<title>React App</title>
 	<link id="external-css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&amp;display=swap" media="all">
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-	<noscript>
-		You need to enable JavaScript to run this app.
-	</noscript>
-	<div id="root"></div>
-	<!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<body>
+<noscript>
+	You need to enable JavaScript to run this app.
+</noscript>
+<div id="root"></div>
+<!--
+    This HTML file is a template.
+    If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    You can add webfonts, meta tags, or analytics to this file.
+    The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    To begin the development, run `npm start` or `yarn start`.
+    To create a production bundle, use `npm run build` or `yarn build`.
+  -->
 </body>
 
 </html>
